# chatFastAPI

./: .gitignore  config.py  main.py  pyproject.toml
database/: __init__.py  userdb.py
database/schemas/: user.py
